[gd_scene load_steps=9 format=3 uid="uid://demj0a08gekqc"]

[ext_resource type="Texture2D" uid="uid://12snf7se5pww" path="res://entities/default/munch/munch.png" id="1_5adpq"]
[ext_resource type="Script" path="res://entities/default/munch/munch.gd" id="1_e20fl"]

[sub_resource type="CircleShape2D" id="CircleShape2D_mr25r"]
radius = 2.0

[sub_resource type="Animation" id="Animation_o4f3v"]
resource_name = "RESET"
length = 0.10001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Animation/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_5adpq")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Animation/Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Animation/Sprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Animation/Sprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Animation/Sprite:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_rxigb"]
resource_name = "default"
length = 0.40001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Animation/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_5adpq")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Animation/Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Animation/Sprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Animation/Sprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Animation/Sprite:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a4nek"]
_data = {
"RESET": SubResource("Animation_o4f3v"),
"default": SubResource("Animation_rxigb")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_4r7uj"]
radius = 64.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ru841"]
radius = 32.0

[node name="Munch" type="CharacterBody2D" groups=["munchies"]]
collision_layer = 64
collision_mask = 66
motion_mode = 1
script = ExtResource("1_e20fl")
default_speed = 60.0
rotation_factor = 0.25

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_mr25r")

[node name="Animation" type="Node2D" parent="."]
rotation = 1.5708

[node name="Sprite" type="Sprite2D" parent="Animation"]
texture_filter = 1
texture_repeat = 1
texture = ExtResource("1_5adpq")
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="Animation"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_a4nek")
}

[node name="Timer" type="Timer" parent="."]
process_callback = 0
one_shot = true

[node name="LostArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 28
monitorable = false

[node name="Collision" type="CollisionShape2D" parent="LostArea"]
shape = SubResource("CircleShape2D_4r7uj")
debug_color = Color(0.172549, 1, 0, 0.419608)

[node name="DetectArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 28
monitorable = false

[node name="Collision" type="CollisionShape2D" parent="DetectArea"]
shape = SubResource("CircleShape2D_ru841")
debug_color = Color(1, 0, 0, 0.419608)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_exited" from="LostArea" to="." method="_on_body_lost"]
[connection signal="body_entered" from="DetectArea" to="." method="_on_body_detected"]
